style: fix alignment for mobile

--- a/src/components/section-cards/section-cards.style.css
+++ b/src/components/section-cards/section-cards.style.css
@@ -1,7 +1,7 @@
 .section-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  column-gap: 1rem;
-  row-gap: 1.5rem;
+  justify-items: center;
   margin-top: 2rem;
+  gap: 1.2rem
 }
